--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                 -->
             </div> 
             <div class="container text-center">
-                <button class="load-more">Load more</button>
+                <button id="load-more" class="">Load more</button>
                 <button class="" onclick="window.location.reload()">Reload</button>
             </div>
         </main>
