--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
         <main>
             <h2>Last News</h2>
             <div id="news" class="">  
+                <!--LOADING BAR-->
                 <!-- Dynamic content
                     <article> for each id 
                         <h3>Title</h3>
