--- a/src/index.html
+++ b/src/index.html
@@ -11,36 +11,48 @@
     </head>
 
     <body>
-        <header>
-            <h1 class="bg-slate-100 text-center max-w-80 m-auto rounded-xl">Last Tech News</h1>
+        <header class="fixed top-0 left-1/2 -translate-x-1/2 bg-slate-100 w-[340px] rounded-lg m-auto">
+            <div class="max-w-80 m-auto">
+                <h1 class="text-center">Last Tech News</h1>
+                <!--Dynamic Progress Bar-->
+                <div class="h-3 mb-1 flex bg-gray-200">
+                    <div id="progress-one" style="width: 10%" class=" bg-blue-200"></div>
+                    <div id="progress-two" style="width: 10%" class=" bg-blue-300"></div>
+                    <div id="progress-three" style="width: 10%" class=" bg-blue-400"></div>
+                    <div id="progress-four" style="width: 10%" class=" bg-blue-500"></div>
+                    <div id="progress-five" style="width: 10%" class=" bg-blue-600"></div>
+                    <div id="progress-six" style="width: 10%" class=" bg-indigo-600"></div>
+                    <div id="progress-seven" style="width: 10%" class=" bg-indigo-700"></div>
+                    <div id="progress-eight" style="width: 10%" class=" bg-indigo-800"></div>
+                    <div id="progress-nine" style="width: 10%" class=" bg-indigo-900"></div>
+                    <div id="progress-ten" style="width: 10%" class=" bg-slate-700"></div>
+                </div>           
+            </div>
 
-            <!--Dynamic Progress Bar-->
-            <!--
-                <div> </div>
-            -->
         </header>
-        <main class="block max-w-80 m-auto">
+        <main class="block max-w-80 mt-[65px] mx-auto">
             <div id="news" class="m-3">  
-                <!-- Dynamic content-->
-                <!--
+                <!-- Dynamic content
                     <article 1> 
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, voluptatibus ex dolorem non iusto quidem voluptates quae laborum earum ea vitae cum obcaecati nemo. Reiciendis illo maxime porro ut sunt?</h3>
                         <p>Time</p>
                         <button href="link">Link</button>
                     </article>
-                    <article 2> 
-                        <h3 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, voluptatibus ex dolorem non iusto quidem voluptates quae laborum earum ea vitae cum obcaecati nemo. Reiciendis illo maxime porro ut sunt?</h3>
-                        <p class="text-right m-1">Time</p>
-                        <button href="link">Link</button>
-                    </article>
                 -->
-            </div> 
-            <div id="buttons" class="flex justify-center m-3" >
-                <button id="load-more" class="flex mr-1 p-1 rounded-lg m">
-                    Load more</button>
-                <button class="flex ml-1 p-1 rounded-lg" onclick="window.location.reload()">
-                    Reload</button>
-            </div>
+            </div>  
         </main>
+
+        <div id="buttons" class="fixed bottom-2 left-1/2 -translate-x-1/2 w-[340px] flex" >
+            <button id="load-more" class="w-1/2 mr-1 text-xl font-bold bg-slate-100 hover:bg-blue-500 hover:text-white active:bg-blue-600 py-2 rounded-lg outline-none focus:outline-none ease-linear transition-all duration-150">Load more</button>
+        <!-- Loading button
+            <button class="bg-indigo-400 h-max w-max rounded-lg text-white font-bold hover:bg-indigo-300 hover:cursor-not-allowed duration-[500ms,800ms]" disabled>
+                <div class="flex items-center justify-center m-[10px]"> 
+                    <div class="h-5 w-5 border-t-transparent border-solid animate-spin rounded-full border-white border-4"></div>
+                    <div class="ml-2"> Loading... <div>
+                </div>
+            </button>
+        -->
+            <button class="w-1/2 ml-1text-xl font-bold bg-slate-100 hover:bg-blue-500 hover:text-white active:bg-blue-600 py-2 rounded-lg outline-none focus:outline-none ease-linear transition-all duration-150" onclick="window.location.reload()">Reload</button>                
+        </div>
     </body>
 </html>
