--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
     </head>
 
     <body>
-        <header class="fixed top-0 left-1/2 -translate-x-1/2 bg-slate-100 min-w-[320px] rounded-lg m-auto">
+        <header class="fixed top-0 left-1/2 -translate-x-1/2 bg-slate-100 w-full min-w-[320px] max-w-[768px] rounded-lg m-auto">
             
-            <h1 class="text-center">Last Tech News</h1>
+            <h1 class="flex justify-center text-4xl">Last Tech News</h1>
 
             <!--Dynamic Progress Bar-->
             <div class="h-3 flex bg-gray-200 rounded-lg">
@@ -22,28 +22,20 @@
 
         </header>
 
-        <main class="block max-w-80 mt-[62px] mx-auto">
-            <div id="news" class="m-3">  
+        <main class="block w-full min-w-[320px] max-w-[768px] mt-[62px] pb-[50px] mx-auto">
+            <div id="news" class="m-4">  
                 <!-- Dynamic content
-                    <article 1> 
+                    <article> 
                         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, voluptatibus ex dolorem non iusto quidem voluptates quae laborum earum ea vitae cum obcaecati nemo. Reiciendis illo maxime porro ut sunt?</h3>
                         <p>Time</p>
-                        <button href="link">Link</button>
+                        <button href="link">Open</button>
                     </article>
                 -->
             </div>  
         </main>
 
-        <div id="buttons" class="fixed bottom-2 left-1/2 -translate-x-1/2 w-[320px] flex">
+        <div id="buttons" class="fixed bottom-2 left-1/2 -translate-x-1/2 w-full max-w-[768px] flex">
             <button id="load-more" class="text-xl w-1/2 mr-1 font-bold bg-slate-100 hover:bg-blue-500 hover:text-white active:bg-blue-600 py-2 rounded-lg outline-none focus:outline-none ease-linear transition-all duration-150">Load more</button>
-        <!-- Loading button
-            <button class="bg-indigo-400 h-max w-max rounded-lg text-white font-bold hover:bg-indigo-300 hover:cursor-not-allowed duration-[500ms,800ms]" disabled>
-                <div class="flex items-center justify-center m-[10px]"> 
-                    <div class="h-5 w-5 border-t-transparent border-solid animate-spin rounded-full border-white border-4"></div>
-                    <div class="ml-2"> Loading... <div>
-                </div>
-            </button>
-        -->
             <button class="text-xl w-1/2 ml-1 font-bold bg-slate-100 hover:bg-blue-500 hover:text-white active:bg-blue-600 py-2 rounded-lg outline-none focus:outline-none ease-linear transition-all duration-150" onclick="window.location.reload()">Reload</button>                
         </div>
     </body>
