--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,7 @@
 
         <main class="block w-full min-w-[320px] max-w-[768px] mt-[62px] pb-[50px] mx-auto">
             <div id="news" class="m-4">  
-                <!-- Dynamic content
-                    <article> 
-                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, voluptatibus ex dolorem non iusto quidem voluptates quae laborum earum ea vitae cum obcaecati nemo. Reiciendis illo maxime porro ut sunt?</h3>
-                        <p>Time</p>
-                        <button href="link">Open</button>
-                    </article>
-                -->
+                <!-- Dynamic content -->
             </div>  
         </main>
 
